--- a/kOMPLEX PROG/Untitled-1.HTML
+++ b/kOMPLEX PROG/Untitled-1.HTML
@@ -16,11 +16,22 @@
     <td>
         <a href="digitalisoktatas.html">Digitális oktatás</a>
     </td>
+    <td>
+        <a href="iskolavedelem.html">Iskolai védelem</a>
+    </td>
 </table>
-
-
-<p>A weblapon hasznos információkat találhatsz az oktatással kapcsolatban.</p>
-
-<img src="kep1.jpg" width="500" height="400">
+<h2>Híreink:</h2>
+<div id="hirek">
+<h3>1</h3>
+<p>asd</p>
+<h3>2</h3>
+<p>asd</p>
+<h3>3</h3>
+<p>asd</p>
+<img src="kep1.jpg" width="500" height="400" id="kep1">
+    <div id="footer">
+     <p>Footer Text</p>
+    </div>
+</div>
 </body>
 </html>
