--- a/Komplex prog/Untitled-1.HTML
+++ b/Komplex prog/Untitled-1.HTML
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+ 
 <h1>Üdvözlünk weblapunkon!</h1>
 
 <table class="menu" cellspacing="1" style="width:100%">
@@ -22,6 +22,7 @@
         <a href="iskolavedelem.html">Iskolai védelem</a>
     </td>
 </table>
+
 <h2>Fidget Picker</h2>
 <div class="picker">
     Red<input type="range" min="0" max="255" step="1" id="red">
@@ -29,9 +30,22 @@
     Blue<input type="range" min="0" max="255" step="1" id="blue">
     <div id="display"></div>
 </div>
+<br>
+<div class="szoveg">
+<h2>Szöveg 1</h2>
+<p>asdasdasd</p>
+
+<h2>Szöveg 2</h2>
+<p>asdasdasd</p>
+
+<h2>Szöveg 3</h2>
+<p>asdasdasd</p>
+</div>
 
 <footer> 
-    <p>adsdsasdffljkja hvekjgdfuhmgbgoéklvmáléd</p>
+    <p>Készítette:<br> Orosz Zoltán, Türk Balázs</p>
+
+   
 </footer>
 </body>
 <script src="javascript.js"></script>
