--- a/Komplex prog/digitalisoktatas.html
+++ b/Komplex prog/digitalisoktatas.html
@@ -2,12 +2,11 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <title>Digitális oktatás</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <title>digitalis oktatás</title>
 </head>
 <body>
-
-<h1>Digitális oktatás</h1>
-<p>Bla bla bla</p>
-
+    
 </body>
 </html>
