--- a/Komplex prog/Untitled-1.HTML
+++ b/Komplex prog/Untitled-1.HTML
@@ -9,7 +9,7 @@
 
 <body>
  
-<h1>Üdvözlünk weblapunkon!</h1>
+<h1 class="mainh">Üdvözlünk weblapunkon!</h1>
 
 <table class="menu" cellspacing="1" style="width:100%">
     <td>
@@ -19,10 +19,10 @@
         <a href="digitalisoktatas.html">Digitális oktatás</a>
     </td>
     <td>
-        <a href="iskolavedelem.html">Iskolai védelem</a>
+        <a href="forrasok.html">Források</a>
     </td>
 </table>
-
+<br><br>
 <h2>Fidget Picker</h2>
 <div class="picker">
     Red<input type="range" min="0" max="255" step="1" id="red">
@@ -30,20 +30,18 @@
     Blue<input type="range" min="0" max="255" step="1" id="blue">
     <div id="display"></div>
 </div>
-<br>
+<br><br><br><br>
 <div class="szoveg">
-<h2>Szöveg 1</h2>
-<p>asdasdasd</p>
+    <h2>Híreink</h2>
+<p> A magyar fociválogatott 64 év után nyerhet Oroszországban</p>
 
-<h2>Szöveg 2</h2>
-<p>asdasdasd</p>
+<p>18 + FEJBE LŐTTE MAGÁT EGY RENDŐR BUDAPESTEN</p>
 
-<h2>Szöveg 3</h2>
-<p>asdasdasd</p>
+<p>MEGLOPTAK EGY BUDAPESTI AUTÓST, AMIKOR KISZÁLLT SEGÍTENI EGY SÚLYOS BALESETNÉL</p>
 </div>
 
 <footer> 
-    <p>Készítette:<br> Orosz Zoltán, Türk Balázs</p>
+    <p>Készítette:<br> Orosz Zoltán</p>
 
    
 </footer>
